Upgraded libs and added prompt injection detection logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-pydantic-ai~=0.3.2
-a2a-sdk~=0.2.12
-allure-python-commons~=2.14.3
-python-dotenv
-gunicorn
-google-cloud-logging
-google-cloud-storage
+pydantic-ai~=1.0.10
+a2a-sdk~=0.3.7
+allure-python-commons~=2.15.0
+python-dotenv~=1.1.1
+gunicorn~=23.0.0
+google-cloud-logging~=3.12.1
+google-cloud-storage~=3.4.0
+transformers~=4.56.2
+torch~=2.8.0
+fastapi~=0.117.1
+httpx~=0.28.1
+python-dateutil~=2.9.0.post0
+requests~=2.32.5
