--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -99,7 +99,7 @@ steps:
       - '--max-instances=1'
       - '--concurrency=1'
       - '--set-secrets=GOOGLE_API_KEY=GOOGLE_API_KEY:latest,JIRA_API_TOKEN=JIRA_API_TOKEN:latest,JIRA_USERNAME=JIRA_USERNAME:latest,ZEPHYR_API_TOKEN=ZEPHYR_API_TOKEN:latest,JIRA_URL=JIRA_URL:latest,JIRA_MCP_SERVER_URL=JIRA_MCP_SERVER_URL:latest,ZEPHYR_BASE_URL=ZEPHYR_BASE_URL:latest'
-      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_REQUIREMENTS_REVIEW_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER'
+      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_REQUIREMENTS_REVIEW_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER,EXTERNAL_PORT=443'
       - '--port=8001'
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -118,7 +118,7 @@ steps:
       - '--max-instances=1'
       - '--concurrency=1'
       - '--set-secrets=GOOGLE_API_KEY=GOOGLE_API_KEY:latest,JIRA_API_TOKEN=JIRA_API_TOKEN:latest,JIRA_USERNAME=JIRA_USERNAME:latest,ZEPHYR_API_TOKEN=ZEPHYR_API_TOKEN:latest,JIRA_URL=JIRA_URL:latest,JIRA_MCP_SERVER_URL=JIRA_MCP_SERVER_URL:latest,ZEPHYR_BASE_URL=ZEPHYR_BASE_URL:latest'
-      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_GENERATION_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER'
+      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_GENERATION_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER,EXTERNAL_PORT=443'
       - '--port=8001'
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -137,7 +137,7 @@ steps:
       - '--max-instances=1'
       - '--concurrency=1'
       - '--set-secrets=GOOGLE_API_KEY=GOOGLE_API_KEY:latest,JIRA_API_TOKEN=JIRA_API_TOKEN:latest,JIRA_USERNAME=JIRA_USERNAME:latest,ZEPHYR_API_TOKEN=ZEPHYR_API_TOKEN:latest,JIRA_URL=JIRA_URL:latest,JIRA_MCP_SERVER_URL=JIRA_MCP_SERVER_URL:latest,ZEPHYR_BASE_URL=ZEPHYR_BASE_URL:latest'
-      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_CLASSIFICATION_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER'
+      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_CLASSIFICATION_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER,EXTERNAL_PORT=443'
       - '--port=8001'
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -156,7 +156,7 @@ steps:
       - '--max-instances=1'
       - '--concurrency=1'
       - '--set-secrets=GOOGLE_API_KEY=GOOGLE_API_KEY:latest,JIRA_API_TOKEN=JIRA_API_TOKEN:latest,JIRA_USERNAME=JIRA_USERNAME:latest,ZEPHYR_API_TOKEN=ZEPHYR_API_TOKEN:latest,JIRA_URL=JIRA_URL:latest,JIRA_MCP_SERVER_URL=JIRA_MCP_SERVER_URL:latest,ZEPHYR_BASE_URL=ZEPHYR_BASE_URL:latest'
-      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_REVIEW_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER'
+      - '--set-env-vars=USE_CLOUD_STORAGE=true,GOOGLE_CLOUD_LOGGING_ENABLED=true,AGENT_BASE_URL=$_TEST_CASE_REVIEW_AGENT_BASE_URL,CLOUD_STORAGE_BUCKET_NAME=$_BUCKET_NAME,JIRA_ATTACHMENTS_CLOUD_STORAGE_FOLDER=$_JIRA_ATTACHMENTS_FOLDER,EXTERNAL_PORT=443'
       - '--port=8001'
 
 substitutions:
