--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ fastapi~=0.117.1
 httpx~=0.28.1
 python-dateutil~=2.9.0.post0
 requests~=2.32.5
-asyncpg
-google-generativeai
 pytest
 pytest-cov
 pytest-asyncio
+qdrant-client~=1.7.0
+fastembed
