--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pydantic-ai~=1.0.10
-a2a-sdk~=0.3.7
-allure-python-commons~=2.15.0
-python-dotenv~=1.1.1
-gunicorn~=23.0.0
-google-cloud-logging~=3.12.1
-google-cloud-storage~=3.4.0
-transformers~=4.56.2
-torch~=2.8.0
-fastapi~=0.117.1
-httpx~=0.28.1
-python-dateutil~=2.9.0.post0
-requests~=2.32.5
-pytest
-pytest-cov
-pytest-asyncio
-qdrant-client~=1.7.0
-fastembed
+pydantic-ai==1.38.0
+a2a-sdk==0.3.22
+allure-python-commons==2.15.2
+python-dotenv==1.2.1
+gunicorn==23.0.0
+google-cloud-logging==3.13.0
+google-cloud-storage==3.7.0
+transformers==4.57.3
+torch==2.9.1
+sentence-transformers==5.2.0
+fastapi==0.127.0
+httpx==0.28.1
+python-dateutil==2.9.0.post0
+requests==2.32.5
+pytest==9.0.2
+pytest-cov==7.0.0
+pytest-asyncio==1.3.0
+qdrant-client==1.16.2
