--- a/agents/jira_rag/Dockerfile
+++ b/agents/jira_rag/Dockerfile
@@ -6,8 +6,8 @@ FROM agentic-qa-base:latest
 ARG WORK_DIR=/app
 WORKDIR ${WORK_DIR}
 
-COPY agents/jira_rag_update/ ${WORK_DIR}/agents/jira_rag_update
+COPY agents/jira_rag/ ${WORK_DIR}/agents/jira_rag
 COPY common/ ${WORK_DIR}/common
 COPY config.py ${WORK_DIR}/config.py
 
-CMD gunicorn -w 1 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT agents.jira_rag_update.main:app
+CMD gunicorn -w 1 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT agents.jira_rag.main:app
