--- a/services/embedding_service/Dockerfile
+++ b/services/embedding_service/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR ${WORK_DIR}
 COPY scripts/download_embedding_model.py /app/scripts/download_embedding_model.py
 RUN python /app/scripts/download_embedding_model.py
 
-COPY services/embedding_service/ ${WORK_DIR}/services/embedding_service
+COPY services/embedding_service/ ${WORK_DIR}/embedding_service
 COPY common/ ${WORK_DIR}/common
 COPY config.py ${WORK_DIR}/config.py
 
-CMD ["python", "services/embedding_service/main.py"]
+CMD ["python", "embedding_service/main.py"]
