--- a/services/embedding_service/Dockerfile
+++ b/services/embedding_service/Dockerfile
@@ -13,4 +13,4 @@ COPY services/embedding_service/ ${WORK_DIR}/embedding_service
 COPY common/ ${WORK_DIR}/common
 COPY config.py ${WORK_DIR}/config.py
 
-CMD ["python", "embedding_service/main.py"]
+CMD gunicorn -w 1 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT embedding_service.main:app
