--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -4,6 +4,9 @@ FROM python:3.14-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y libmagic1 && rm -rf /var/lib/apt/lists/*
+
 # Copy the requirements file into the container
 COPY requirements.txt .
 
