--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ pytest-asyncio==1.3.0
 qdrant-client==1.16.2
 einops==0.8.1
 python-magic==0.4.27
+python-magic-bin==0.4.14; sys_platform == 'win32'
